--- a/_config.yml
+++ b/_config.yml
@@ -85,15 +85,15 @@ kaggle_id: # your kaggle id
 keybase_username: # your keybase user name
 lastfm_id: # your lastfm id
 lattes_id: # your ID on Lattes (Brazilian Lattes CV)
-linkedin_username: https://www.linkedin.com/in/nicklwagner/ # your LinkedIn user name
+linkedin_username: #https://www.linkedin.com/in/nicklwagner/ # your LinkedIn user name
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 medium_username: # your Medium username
-orcid_id: https://orcid.org/0000-0002-1454-7002 # your ORCID ID
+orcid_id: #https://orcid.org/0000-0002-1454-7002 # your ORCID ID
 osf_id: # your OSF ID
 pinterest_id: # your pinterest id
 publons_id: # your ID on Publons
 quora_username: # your Quora username
-research_gate_profile: https://www.researchgate.net/profile/Nicholas-Wagner-16 # your profile on ResearchGate
+research_gate_profile: #https://www.researchgate.net/profile/Nicholas-Wagner-16 # your profile on ResearchGate
 scholar_userid:  # your Google Scholar ID
 scopus_id: # your profile on Scopus
 semanticscholar_id: # your Semantic Scholar ID
