--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,10 @@ middle_name: L.
 last_name: Wagner
 email: nick_wagner2@baylor.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 keywords: Nick Wagner, Mars, Geophysics, Geodesy, Love Numbers, Gravity, Lithosphere, Flexure, Geodynamics # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
@@ -41,7 +40,7 @@ repo_trophies:
 # will use title and url fields
 # Take a look to https://github.com/jekyll/jekyll-feed for more customization
 
-rss_icon: true
+rss_icon: false
 
 # -----------------------------------------------------------------------------
 # Layout
@@ -77,7 +76,7 @@ dblp_url: # your DBLP profile url
 discord_id: # your discord id (18-digit unique numerical identifier)
 facebook_id: # your facebook id
 flickr_id: # your flickr id
-github_username: #nlwagner # your GitHub user name
+github_username: nlwagner # your GitHub user name
 gitlab_username: # your GitLab user name
 ieee_id: # your ieeexplore.ieee.org/author/id
 instagram_id: # your instagram id
@@ -88,13 +87,13 @@ lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 linkedin_username: https://www.linkedin.com/in/nicklwagner/ # your LinkedIn user name
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 medium_username: # your Medium username
-orcid_id: #https://orcid.org/0000-0002-1454-7002 # your ORCID ID
+orcid_id: https://orcid.org/0000-0002-1454-7002 # your ORCID ID
 osf_id: # your OSF ID
 pinterest_id: # your pinterest id
 publons_id: # your ID on Publons
 quora_username: # your Quora username
-research_gate_profile: #https://www.researchgate.net/profile/Nicholas-Wagner-16 # your profile on ResearchGate
-scholar_userid:  # your Google Scholar ID
+research_gate_profile: https://www.researchgate.net/profile/Nicholas-Wagner-16 # your profile on ResearchGate
+scholar_userid: https://scholar.google.com/citations?user=j9K647AAAAAJ&hl=en # your Google Scholar ID
 scopus_id: # your profile on Scopus
 semanticscholar_id: # your Semantic Scholar ID
 spotify_id: # your spotify id
@@ -106,12 +105,12 @@ whatsapp_number: # your WhatsApp number (full phone number in international form
 wikidata_id: # your wikidata id
 wikipedia_id: # your wikipedia id (Case sensitive)
 work_url: # work page URL
-x_username: #astrowags # your X handle
+x_username: astrowags # your X handle
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
-  Feel free to get in contact with me through email!
+  Feel free to get in contact with me about project ideas or collaborations through your favorite form of communication!
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
@@ -198,12 +197,12 @@ collections:
     permalink: /projects/:path/
 
 announcements:
-  enabled: true
+  enabled: false
   scrollable: true # adds a vertical scroll bar if there are more than 3 news items
   limit: 5 # leave blank to include all the news in the `_news` folder
 
 latest_posts:
-  enabled: true
+  enabled: false
   scrollable: true # adds a vertical scroll bar if there are more than 3 new posts items
   limit: 3 # leave blank to include all the blog posts
 
