--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Nicholas (Nick)
 middle_name: L.
 last_name: Wagner
-email: nick_wagner2@baylor.edu
+email: nicholas_wagner@brown.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
